# Clonestagram

./: README.md  pyproject.toml  pytest.ini  requirements.txt
clonestagram/: asgi.py  settings.py  urls.py  wsgi.py
clonestagram/posts/: admin.py  apps.py  models.py  tests.py
clonestagram/posts/migrations/: 0001_initial.py
clonestagram/users/: apps.py  models.py  tests.py
clonestagram/users/migrations/: 0001_initial.py  0002_add_fields.py  0002_customuser_display_name.py
