[tool.poetry]
name = "instagram_clone"
version = "0.1.0"
description = ""
authors = ["Jessica Louis"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.2.2"
pipreqs = "^0.4.13"
pytest-django = "^4.5.2"
Pillow = "^10.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.3.2"
pytest-django = "^4.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"